# XenXenXenSe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_FAQ.md  Pipfile  README.md  config.example.json  config.json  config.py  config.py.example  core.py  ecosystem.config.js  logging_config.json.example  main.py  mypy.ini  pyproject.toml  requirements.txt  test.py
.github/workflows/: black.yml  fade.yml  lint.yml  release.yml  test.yml  unit_test.yml
.github/workflows-resource/: logging_config.json
API/: __init__.py
API/v1/: __init__.py  _root.py  root.py
API/v1/Common/: __init__.py
API/v1/Console/: __init__.py  info.py  serialize.py
API/v1/GuestMetrics/: __init__.py  info.py  serialize.py
API/v1/Host/: __init__.py  info.py  list.py  serialize.py
API/v1/Interface/: __init__.py
API/v1/Network/: __init__.py  info.py  list.py  serialize.py
API/v1/PIF/: __init__.py  info.py  list.py  serialize.py
API/v1/SR/: __init__.py  find.py  info.py  list.py  scan.py  serialize.py  vdis.py
API/v1/VBD/: __init__.py  create.py  delete.py  find_vdi.py  info.py  list.py  media.py  plug.py  serialize.py
API/v1/VDI/: __init__.py  copy.py  delete.py  find.py  info.py  list.py  resize.py  serialize.py  sr.py
API/v1/VIF/: __init__.py  create.py  info.py  ipv4.py  ipv4_allowed.py  ipv6.py  ipv6_allowed.py  list.py  lock.py  model.py  network.py  plug.py  qos.py  serialize.py
API/v1/VM/: __init__.py  bios.py  cd.py  clone.py  console.py  copy.py  delete.py  first_vif.py  guest.py  info.py  list.py  metadata.py  metrics.py  platform.py  power.py  serialize.py  specs.py  vbd.py  vif.py  xenstore.py
API/v1/model/: __init__.py  _root.py  host.py
API/v1/model/host/: __init__.py  _info.py  _list.py
API/v1/model/vdi/: __init__.py  _vdi.py
MySQL/: __init__.py  interface.py
MySQL/Host/: __init__.py
MySQL/Status/: __init__.py
MySQL/VM/: __init__.py
XenXenXenSe/: __init__.py  session.py
XenXenXenSe/Console/: __init__.py
XenXenXenSe/GuestMetrics/: __init__.py
XenXenXenSe/Host/: __init__.py
XenXenXenSe/SR/: __init__.py
XenXenXenSe/VBD/: __init__.py
XenXenXenSe/VDI/: __init__.py
XenXenXenSe/VIF/: __init__.py
XenXenXenSe/VM/: __init__.py
app/: __init__.py  console.py  controller.py  security.py  service.py  settings.py
app/controller/: __init__.py
app/costum_logging/: __init__.py  customizeLogger.py  interceptHandler.py
app/extension/: __init__.py
app/extension/logging/: __init__.py  customizeLogger.py
app/services/: __init__.py  server.py
app/services/console/: __init__.py
app/services/info/: __init__.py
demonstration/: banner.psd
scripts/: format-imports.sh  format.sh  lint-black.sh  lint-flake8.sh  lint-isort.sh  lint-mypy.sh  lint.sh  pre-commit-hooks.sh  requirements.txt  venv.sh
