[project]
name = "XenXenXenSe"
version = "1.2.6"
description = "An easy-to-use HTTP API of XenAPI for Web Application Developers."
authors = [
    "Alex4386 <alex4386@stella-it.com>",
    "zeroday0619 <zeroday0619@kakao.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/Stella-IT/XenXenXenSe"
repository = "https://github.com/Stella-IT/XenXenXenSe"
documentation = "https://github.com/Stella-IT/XenXenXenSe"

keywords = ["xenapi", "http", "api"]

target-version = ['py37','py38','py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv         # Python virtual envs
    | \.idea         # Jetbrains IDEA-based IDEs
    | \.github       # GitHub CI
    | _build
    | buck-out
    | build
    | dist
    | demonstration  # Repository specific: code demo resources
    | __pycache__    # Python JIT Compile caches
  )/
# | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]